--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.20",
+    "dom": "^0.0.3",
+    "postcss": "^8.4.49",
     "prettier": "^3.3.3",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.28.0",
+    "router": "^1.3.8",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
